# django-project-template

./: manage.py  pyproject.toml
core/: asgi.py  settings.py  wsgi.py
