[tool.poetry]
name = "django-project-template"
version = "0.1.0"
description = ""
authors = ["whatislove118 <oleg.pochikalin@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.12.0"
drf-spectacular = "^0.22.1"
django-allauth = "^0.50.0"
dj-rest-auth = "^2.2.4"
gunicorn = "^20.1.0"
djangorestframework-simplejwt = "^5.1.0"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
django-model-utils = "^4.2.0"
drf-access-policy = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
autoflake = "^1.4"
black = "^22.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
